--- a/bin/Resource/fssort.ini
+++ b/bin/Resource/fssort.ini
@@ -4,3 +4,9 @@ FUCK.MP4
 MATBRIGHTTMP.JPEG
 MATOUTPUTIMG.JPEG
 RESULTIMG.JPEG
+1543555832_491642.JPG
+2018121715541327.JPEG
+2018122409130887.JPEG
+ORIG_JAIL_2048X1536.PNG
+矫正后.JPEG
+矫正前.JPEG
