--- a/code/Platform/Platform.vcxproj
+++ b/code/Platform/Platform.vcxproj
@@ -53,7 +53,7 @@
     <ClCompile>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <PreprocessorDefinitions>UNICODE;WIN32;WIN64;QT_CORE_LIB;QT_GUI_LIB;QT_OPENGL_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.\Utils;..\include;.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtOpenGL;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\BarrelCorrection_CPU;.\BarrelCorrection_CPU\include\CL;.\BarrelCorrection_CPU\include;.\Utils;..\include;.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtOpenGL;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Disabled</Optimization>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -69,7 +69,7 @@
     <QtMoc>
       <OutputFile>.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</OutputFile>
       <ExecutionDescription>Moc'ing %(Identity)...</ExecutionDescription>
-      <IncludePath>.\Utils;..\include;.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtOpenGL;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</IncludePath>
+      <IncludePath>.\BarrelCorrection_CPU;.\BarrelCorrection_CPU\include\CL;.\BarrelCorrection_CPU\include;.\Utils;..\include;.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtOpenGL;$(QTDIR)\include\QtWidgets;%(AdditionalIncludeDirectories)</IncludePath>
       <Define>UNICODE;WIN32;WIN64;QT_CORE_LIB;QT_GUI_LIB;QT_OPENGL_LIB;QT_WIDGETS_LIB;%(PreprocessorDefinitions)</Define>
     </QtMoc>
     <QtUic>
@@ -128,6 +128,9 @@
     <ClCompile Include="BarrelCorrection\BarrelProcess.cpp" />
     <ClCompile Include="BarrelCorrection\common_func.cpp" />
     <ClCompile Include="BarrelCorrection\VirtualStitch.cpp" />
+    <ClCompile Include="BarrelCorrection_CPU\CPUBarrelCorrection.c" />
+    <ClCompile Include="BarrelCorrection_CPU\module\BC.c" />
+    <ClCompile Include="BarrelCorrection_CPU\module\BC_1920_1080.c" />
     <ClCompile Include="c_barrel_correction.cpp" />
     <ClCompile Include="c_show_thread.cpp" />
     <ClCompile Include="main.cpp" />
@@ -149,6 +152,23 @@
     <QtMoc Include="q_image_show.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BarrelCorrection_CPU\include\BC.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl.hpp" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_egl.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_ext.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_ext_qcom.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_gl.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_gl_ext.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_perf_monitor_qcom.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_platform.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\opencl.h" />
+    <ClInclude Include="BarrelCorrection_CPU\CPUBarrelCorrection.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUBC.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUBCCommon.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUCommon.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\ISPVideoAlg.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\ISP_Alglog.h" />
     <ClInclude Include="c_barrel_correction.h" />
     <ClInclude Include="debug_log.h" />
     <ClInclude Include="Utils\c_transform.h" />
