--- a/code/Platform/Platform.vcxproj
+++ b/code/Platform/Platform.vcxproj
@@ -128,8 +128,9 @@
     <ClCompile Include="BarrelCorrection\BarrelProcess.cpp" />
     <ClCompile Include="BarrelCorrection\common_func.cpp" />
     <ClCompile Include="BarrelCorrection\VirtualStitch.cpp" />
-    <ClCompile Include="BarrelCorrection_CPU\module\BC.c" />
-    <ClCompile Include="BarrelCorrection_CPU\module\BC_1920_1080.c" />
+    <ClCompile Include="BarrelCorrection_CPU\CPUBarrelCorrection.c" />
+    <ClCompile Include="BarrelCorrection_CPU\ISPCPUVideoAlg.cpp" />
+    <ClCompile Include="BarrelCorrection_CPU\module\BarrelCorrection\BC_1920_1080.c" />
     <ClCompile Include="c_barrel_correction.cpp" />
     <ClCompile Include="c_show_thread.cpp" />
     <ClCompile Include="main.cpp" />
@@ -151,6 +152,31 @@
     <QtMoc Include="q_image_show.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BarrelCorrection_CPU\CPUBarrelCorrection.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\BC.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl.hpp" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_egl.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_ext.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_ext_qcom.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_gl.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_gl_ext.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_perf_monitor_qcom.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_platform.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\opencl.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUBarrelCorrection.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUBC.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUBC_VS.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUCommon.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\ISPVideoAlg.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\ISP_Alglog.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\cblas.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\f77blas.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\lapacke.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\lapacke_config.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\lapacke_mangling.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\lapacke_utils.h" />
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\openblas_config.h" />
     <ClInclude Include="c_barrel_correction.h" />
     <ClInclude Include="debug_log.h" />
     <ClInclude Include="Utils\c_transform.h" />
