--- a/code/Platform/Platform.vcxproj.filters
+++ b/code/Platform/Platform.vcxproj.filters
@@ -93,10 +93,13 @@
     <ClCompile Include="c_barrel_correction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BarrelCorrection_CPU\module\BC_1920_1080.c">
+    <ClCompile Include="BarrelCorrection_CPU\module\BarrelCorrection\BC_1920_1080.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BarrelCorrection_CPU\module\BC.c">
+    <ClCompile Include="BarrelCorrection_CPU\CPUBarrelCorrection.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BarrelCorrection_CPU\ISPCPUVideoAlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -129,6 +132,81 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="c_barrel_correction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\CPUBarrelCorrection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_egl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_ext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_ext_qcom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_gl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_gl_ext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_perf_monitor_qcom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\cl_platform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CL\opencl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\cblas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\f77blas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\lapacke.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\lapacke_config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\lapacke_mangling.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\lapacke_utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\openblas\openblas_config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\BC.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUBarrelCorrection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUBC.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUBC_VS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\CPUCommon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\ISP_Alglog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelCorrection_CPU\include\ISPVideoAlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
