--- a/code/Platform/Platform.vcxproj.filters
+++ b/code/Platform/Platform.vcxproj.filters
@@ -96,10 +96,10 @@
     <ClCompile Include="BarrelCorrection_CPU\module\BarrelCorrection\BC_1920_1080.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BarrelCorrection_CPU\CPUBarrelCorrection.c">
+    <ClCompile Include="BarrelCorrection_CPU\ISPCPUVideoAlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BarrelCorrection_CPU\ISPCPUVideoAlg.cpp">
+    <ClCompile Include="BarrelCorrection_CPU\module\BarrelCorrection\BarrelCorrection.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -132,9 +132,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="c_barrel_correction.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="BarrelCorrection_CPU\CPUBarrelCorrection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BarrelCorrection_CPU\include\CL\cl.h">
